--- a/table.css
+++ b/table.css
@@ -1,2 +1,8 @@
+body { background-color: rgb( 224, 238, 238 ); }
+h1 { text-align: center; }
+table { background-color: rgb( 240, 255, 255 );
+		border: outset 8pt; }
 caption	{ font-style: italic; }
-th, td	{ padding: 3px 6px; text-align: left; }
+th, td	{ padding: 3px 6px; 
+			text-align: left;
+			border: solid 1pt; }
