--- a/table.css
+++ b/table.css
@@ -1,7 +1,8 @@
 body { background-color: rgb( 224, 238, 238 ); font-family: sans-serif; }
 h1 { text-align: center; font-family: serif; }
 table { background-color: rgb( 240, 255, 255 );
-		border: outset 8pt; }
+		//border: outset 8pt;
+		margin: 0em; }
 caption	{ font-style: italic; }
 th, td	{ padding: 3px 6px; 
 			text-align: left;
